web后台默认账号密码改为admin：admin
Former-commit-id: 3862e916b5bcb1960a66f86de26c80971f427a05
Former-commit-id: e8db4bf0d1540d653cde7e5d0c28c5a309b5edd7 [formerly fcc166d660ccd3c3df4b0b59ca390761ceb4dd5b]
Former-commit-id: 94a577920c700ec82772e449be556d847c6dcf5e

--- a/EasyDarwin/WinNTSupport/EasyDarwin.vcxproj
+++ b/EasyDarwin/WinNTSupport/EasyDarwin.vcxproj
@@ -240,9 +240,9 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>ws2_32.lib;wsock32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>..\WinNTSupport\Release\EasyDarwin.exe</OutputFile>
+      <OutputFile>..\WinNTSupport\x64\Release\EasyDarwin.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalLibraryDirectories>..\Lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Lib\x64\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ProgramDatabaseFile>.\Release/DarwinStreamingServer.pdb</ProgramDatabaseFile>
       <SubSystem>Console</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
