--- a/CommonUtilitiesLib/CommonUtilitiesLib.vcxproj
+++ b/CommonUtilitiesLib/CommonUtilitiesLib.vcxproj
@@ -24,25 +24,25 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -191,6 +191,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="atomic.cpp" />
     <ClCompile Include="base64.c" />
     <ClCompile Include="ClientSocket.cpp" />
     <ClCompile Include="ConfParser.cpp" />
@@ -202,7 +203,6 @@
     <ClCompile Include="GetWord.c" />
     <ClCompile Include="IdleTask.cpp" />
     <ClCompile Include="keyframecache.cpp" />
-    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="md5.c" />
     <ClCompile Include="md5digest.cpp" />
     <ClCompile Include="MyAssert.cpp" />
@@ -244,11 +244,9 @@
     <ClInclude Include="ClientSocket.h" />
     <ClInclude Include="CreateDump.h" />
     <ClInclude Include="Format.h" />
-    <ClInclude Include="Logger.h" />
     <ClInclude Include="OSMapEx.h" />
     <ClInclude Include="OSRefTableEx.h" />
     <ClInclude Include="QueryParamList.h" />
-    <ClInclude Include="ScopeGuard.h" />
     <ClInclude Include="SyncDeque.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
