--- a/CommonUtilitiesLib/CommonUtilitiesLib.vcxproj.filters
+++ b/CommonUtilitiesLib/CommonUtilitiesLib.vcxproj.filters
@@ -145,10 +145,10 @@
     <ClCompile Include="win32ev.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Logger.cpp">
+    <ClCompile Include="CreateDump.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CreateDump.cpp">
+    <ClCompile Include="atomic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -165,8 +165,6 @@
     <ClInclude Include="Format.h" />
     <ClInclude Include="OSMapEx.h" />
     <ClInclude Include="OSRefTableEx.h" />
-    <ClInclude Include="Logger.h" />
-    <ClInclude Include="ScopeGuard.h" />
     <ClInclude Include="CreateDump.h" />
   </ItemGroup>
 </Project>
