fix LINK : fatal error LNK1123: 转换到 COFF 期间失败: 文件无效或损坏
Former-commit-id: 5851f2abbcfe4bd960f241c7ff3310b3d41d1857
Former-commit-id: 696578df5afa8786e5a27aec96ee5c456f250bf7 [formerly f5c85f01c32238d9548cea2386305f3c826c9e4d]
Former-commit-id: 675558fc1524fc98c4734686aefe3f6161e12ce0

--- a/EasyDarwin/WinNTSupport/EasyDarwin.vcxproj
+++ b/EasyDarwin/WinNTSupport/EasyDarwin.vcxproj
@@ -74,17 +74,21 @@
     <OutDir>.\Debug\</OutDir>
     <IntDir>.\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
+    <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>.\Release\</OutDir>
     <IntDir>.\Release\</IntDir>
     <LinkIncremental>true</LinkIncremental>
+    <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Midl>
