提示仓库地址
Former-commit-id: 9c7b85e81f26f2feaa0daf11f3c272303bf3d820
Former-commit-id: 8743dbad1ff35cff064133f5fdb0918cd3c92c3d [formerly e6637792f4d851ab7791e29a23ac1026bc3b6d44]
Former-commit-id: 594a382aac25e07e8ec843be67a9657e7fab4ddc

--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
       "web_src"
     ]
   },
+  "repository": {  
+    "type": "git",  
+    "url": "https://github.com/EasyDarwin/EasyDarwin.git"
+  },
   "pack": {
     "pattern": "{routes/**,utils/**,www/**,*.js,*.bat,*.sh,*.md,node_modules/**}",
     "options": {
