--- a/web_src/package.json
+++ b/web_src/package.json
@@ -44,6 +44,7 @@
     "sass-loader": "6.0.7",
     "sockette": "2.0.0",
     "style-loader": "0.20.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "1.0.1",
     "v-charts": "1.16.7",
     "vee-validate": "2.0.6",
