--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build:ico": "rsrc -arch amd64 -ico ed.ico -o EasyDarwin_windows.syso",
-    "build:www": "cd web_src && npm run build && cd .. && apidoc -i routers -o www/apidoc",
-    "build:doc": "apidoc -i routers -o www/apidoc",
+    "build:www": "cd www && npm run build && cd .. && apidoc -i routers -o www/dist/apidoc",
+    "build:doc": "apidoc -i routers -o www/dist/apidoc",
     "build:win": "go build -tags release -ldflags \"-s -w\" -o EasyDarwin.exe",
     "build:lin": "go build -tags release -ldflags \"-X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
     "build:dev": "go build -o EasyDarwin.exe",
     "dev": "go build -o EasyDarwin.exe",
     "dev:lin": "go build -o easydarwin",
-    "dev:www": "cd web_src && npm run start",
+    "dev:www": "cd www && npm run start",
     "clean": "rimraf EasyDarwin.exe EasyDarwin.exe~ easydarwin"
   },
   "apidoc": {
