--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "build:ico": "rsrc -arch amd64 -ico ed.ico -o EasyDarwin_windows.syso",
     "build:www": "cd www && npm run build && cd .. && apidoc -i routers -o www/dist/apidoc",
     "build:doc": "apidoc -i routers -o www/dist/apidoc",
-    "build:win": "go build -tags release -ldflags \"-s -w\" -o EasyDarwin.exe",
-    "build:lin": "go build -tags release -ldflags \"-X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
-    "build:dev": "go build -o EasyDarwin.exe",
-    "dev": "go build -o EasyDarwin.exe",
-    "dev:lin": "go build -o easydarwin",
+    "build:win": "npm run build:www && go generate && go build -tags release -ldflags \"-s -w\" -o EasyDarwin.exe",
+    "build:lin": "npm run build:www && go generate && go build -tags release -ldflags \"-X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
+    "dev": "cd www && npm run build && cd .. && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o EasyDarwin.exe",
+    "dev:lin": "cd www && npm run build && cd .. && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o easydarwin",
     "dev:www": "cd www && npm run start",
     "clean": "rimraf EasyDarwin.exe EasyDarwin.exe~ easydarwin"
   },
