adjust project structure
Former-commit-id: c8db684cc111e03e988e7852737270494c583d7f

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode
-www/dist
-/bindata/*
+dist
+/bindata.go
 /easydarwin
 /EasyDarwin.exe
 /EasyDarwin.exe~
@@ -15,6 +15,7 @@ node_modules
 /*.dev.db
 .idea
 easydarwin_debug.ini
+EasyDarwin_windows.syso
 .DS_Store
 Unnamed
 dev.ini
