--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "EasyDarwin Open Source Media Server",
   "main": "index.js",
   "scripts": {
+    "web:start": "cross-env NODE_ENV=development webpack-dev-server --open",
+    "web:build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "build:ico": "rsrc -arch amd64 -ico ed.ico -o EasyDarwin_windows.syso",
-    "build:www": "cd www && npm run build && cd .. && apidoc -i routers -o www/dist/apidoc",
-    "build:doc": "apidoc -i routers -o www/dist/apidoc",
-    "build:win": "npm run build:www && go generate && go build -tags release -ldflags \"-s -w\" -o EasyDarwin.exe",
+    "build:www": "npm run web:build && apidoc -i routers -o dist/apidoc",
+    "build:doc": "apidoc -i routers -o dist/apidoc",
+    "build:win": "npm run build:www && npm run build:ico && go generate && go build -tags release -ldflags \"-s -w\" -o EasyDarwin.exe",
     "build:lin": "npm run build:www && go generate && go build -tags release -ldflags \"-X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
-    "dev": "cd www && npm run build && cd .. && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o EasyDarwin.exe",
-    "dev:lin": "cd www && npm run build && cd .. && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o easydarwin",
-    "dev:www": "cd www && npm run start",
-    "clean": "rimraf EasyDarwin.exe EasyDarwin.exe~ easydarwin"
+    "dev": "npm run web:build && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o EasyDarwin.exe",
+    "dev:lin": "npm run web:build && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o easydarwin",
+    "dev:www": "npm run web:start",
+    "clean": "rimraf EasyDarwin.exe EasyDarwin.exe~ easydarwin bindata.go EasyDarwin_windows.syso"
   },
+  "keywords": [
+    "EasyDarwin"
+  ],
+  "author": "penggy",
+  "license": "ISC",
   "apidoc": {
     "name": "EasyDarwin",
     "title": "EasyDarwin API Reference",
@@ -35,9 +42,52 @@
       "GetServerInfo"
     ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "admin-lte": "2.4.18",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-stage-2": "6.24.1",
+    "bootstrap": "3.3.7",
+    "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "4.6.0",
+    "cross-env": "5.2.1",
+    "css-loader": "0.28.11",
+    "easy-player": "1.0.15",
+    "echarts": "4.0.4",
+    "element-ui": "2.2.2",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.11",
+    "font-awesome": "4.7.0",
+    "glob": "7.1.2",
+    "html-webpack-plugin": "3.1.0",
+    "jquery-ui": "1.12.1",
+    "less": "3.0.1",
+    "less-loader": "4.1.0",
+    "lodash": "4.17.19",
+    "moment": "2.21.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "pretty-bytes": "4.0.2",
+    "sass-loader": "6.0.7",
+    "sockette": "2.0.0",
+    "style-loader": "0.20.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "1.0.1",
+    "v-charts": "1.16.7",
+    "vee-validate": "2.0.6",
+    "vue": "2.6.14",
+    "vue-backtotop": "1.6.1",
+    "vue-clipboards": "1.3.0",
+    "vue-fullscreen": "2.6.1",
+    "vue-loader": "14.2.4",
+    "vue-router": "3.5.3",
+    "vue-template-compiler": "2.6.14",
+    "vuex": "3.6.2",
+    "webpack": "3.11.0",
+    "webpack-dev-server": "2.11.2"
+  },
   "pack": [
     {
       "name": "EasyDarwin-windows",
