(WIP): add flv support

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -3,6 +3,21 @@ port=10008
 default_username=admin
 default_password=admin
 
+[codec]
+; easydarwin使用ffmpeg工具。这里表示ffmpeg的可执行程序的路径
+ffmpeg_binary=d:\opt\apps\ffmpeg-4.4.1-full_build\bin\ffmpeg.exe
+
+[flv]
+enabled=true
+embedded_server=1
+api_addr=:8090
+stream_addr=:1935
+flv_addr=:7001
+; embedded_server=0
+; api_addr=172.16.62.219:8090
+; stream_addr=172.16.62.219:1935
+; flv_addr=172.16.62.219:7001
+
 [rtsp]
 port=554
 
@@ -26,9 +41,6 @@ authorization_enable=0
 
 ; 是否使能推送的同事进行本地存储，使能后则可以进行录像查询与回放。
 save_stream_to_local=0
-
-;easydarwin使用ffmpeg工具来进行存储。这里表示ffmpeg的可执行程序的路径
-ffmpeg_path=/Users/ze/Downloads/ffmpeg-20180719-9cb3d8f-macos64-shared/bin/ffmpeg
 
 ;本地存储所将要保存的根目录。如果不存在，程序会尝试创建该目录。
 m3u8_dir_path=/Users/ze/Downloads/EasyDarwinGoM3u8
