fix config for flv-server

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -5,18 +5,23 @@ default_password=admin
 
 [codec]
 ; easydarwin使用ffmpeg工具。这里表示ffmpeg的可执行程序的路径
-ffmpeg_binary=d:\opt\apps\ffmpeg-4.4.1-full_build\bin\ffmpeg.exe
+ffmpeg_binary=d:\\opt\\apps\\ffmpeg-4.4.1-full_build\\bin\\ffmpeg.exe
 
 [flv]
 enabled=true
 embedded_server=1
+log_level=trace
+read_timeout=60
+write_timeout=60
 api_addr=:8090
 stream_addr=:1935
 flv_addr=:7001
+hls_addr=:7002
 ; embedded_server=0
 ; api_addr=172.16.62.219:8090
 ; stream_addr=172.16.62.219:1935
 ; flv_addr=172.16.62.219:7001
+; hls_addr=172.16.62.219:7001
 
 [rtsp]
 port=554
