--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build:ico": "rsrc -arch amd64 -ico ed.ico -o EasyDarwin_windows.syso",
     "build:www": "npm run web:build && apidoc -i routers -o dist/apidoc",
     "build:doc": "apidoc -i routers -o dist/apidoc",
-    "build:win": "npm run build:www && npm run build:ico && go generate && go build -tags release -ldflags \"-s -w\" -o EasyDarwin.exe",
-    "build:lin": "npm run build:www && go generate && go build -tags release -ldflags \"-X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
-    "dev": "npm run web:build && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o EasyDarwin.exe",
-    "dev:lin": "npm run web:build && go-bindata-assetfs -debug -o bindata/bindata.go -pkg bindata -prefix www/dist www/dist/... && go build -o easydarwin",
+    "build:win": "npm run build:www && npm run build:ico && go generate && go build -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -s -w\" -tags release -o EasyDarwin.exe",
+    "build:lin": "npm run build:www && go generate && go build -tags release -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
+    "dev": "npm run web:build && go-bindata-assetfs -debug -o bindata.go -prefix dist dist/... && go build -o EasyDarwin.exe",
+    "dev:lin": "npm run web:build && go-bindata-assetfs -debug -o bindata.go -prefix dist dist/... && go build -o easydarwin",
     "dev:www": "npm run web:start",
     "clean": "rimraf EasyDarwin.exe EasyDarwin.exe~ easydarwin bindata.go EasyDarwin_windows.syso"
   },
