enable setting video codecs for ffmpeg

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -6,6 +6,19 @@ default_password=admin
 [codec]
 ; easydarwin使用ffmpeg工具。这里表示ffmpeg的可执行程序的路径
 ffmpeg_binary=d:\\opt\\apps\\ffmpeg-4.4.1-full_build\\bin\\ffmpeg.exe
+; list available codecs by 'ffmpeg -encoders'
+; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 (codec h264)
+; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 RGB (codec h264)
+; h264_amf    AMD AMF H.264 Encoder (codec h264)
+; h264_nvenc  NVIDIA NVENC H.264 encoder (codec h264)
+; h264_qsv    H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 (Intel Quick Sync Video acceleration) (codec h264)
+; nvenc       NVIDIA NVENC H.264 encoder (codec h264)
+; nvenc_h264  NVIDIA NVENC H.264 encoder (codec h264)
+; Default codec is 'libx264'
+ffmpeg_video_codec=h264_qsv
+; additional codec args used on Linux, such as:
+; '-hwaccel vaapi -hwaccel_output_format vaapi -hwaccel_device /dev/dri/renderD128'
+ffmpeg_video_codec_args=
 
 [flv]
 enabled=true
