--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:doc": "apidoc -i routers -o dist/apidoc",
     "build:win": "npm run build:www && npm run build:ico && go generate && go build -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -s -w\" -tags release -o EasyDarwin.exe",
     "build:lin": "npm run build:www && go generate && go build -tags release -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
-    "dev": "npm run web:build && go-bindata-assetfs -debug -o bindata.go -prefix dist dist/... && go build -o EasyDarwin.exe",
+    "dev:win": "npm run web:build && go-bindata-assetfs -debug -o bindata.go -prefix dist dist/... && go build -o EasyDarwin.exe",
     "dev:lin": "npm run web:build && go-bindata-assetfs -debug -o bindata.go -prefix dist dist/... && go build -o easydarwin",
     "dev:www": "npm run web:start",
     "clean": "rimraf EasyDarwin.exe EasyDarwin.exe~ easydarwin bindata.go EasyDarwin_windows.syso"
