add shell script for ffmpeg on linux

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -5,7 +5,10 @@ default_password=admin
 
 [codec]
 ; easydarwin使用ffmpeg工具。这里表示ffmpeg的可执行程序的路径
+; On linux, using ffmpeg.sh for VAAPI support
+; ffmpeg_binary=.\ffmpeg.sh
 ffmpeg_binary=d:\\opt\\apps\\ffmpeg-4.4.1-full_build\\bin\\ffmpeg.exe
+
 ; list available codecs by 'ffmpeg -encoders'
 ; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 (codec h264)
 ; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 RGB (codec h264)
