--- a/easydarwin-sample.ini
+++ b/easydarwin-sample.ini
@@ -6,7 +6,7 @@ default_password=admin
 [codec]
 ; easydarwin使用ffmpeg工具。这里表示ffmpeg的可执行程序的路径
 ; On linux, using ffmpeg.sh for VAAPI support
-; ffmpeg_binary=.\ffmpeg.sh
+; ffmpeg_binary=./ffmpeg.sh
 ffmpeg_binary=d:\\opt\\apps\\ffmpeg-4.4.1-full_build\\bin\\ffmpeg.exe
 
 ; list available codecs by 'ffmpeg -encoders'
