update build helper

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:ico": "rsrc -arch amd64 -ico ed.ico -o EasyDarwin_windows.syso",
     "build:www": "npm run web:build && apidoc -i routers -o dist/apidoc",
     "build:doc": "apidoc -i routers -o dist/apidoc",
-    "build:win": "npm run build:www && npm run build:ico && go generate && go build -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -s -w\" -tags release -o EasyDarwin.exe",
-    "build:lin": "npm run build:www && go generate && go build -tags release -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -X 'main.buildDateTime=$(date '+%Y-%m-%d %H:%M:%S')' -X 'main.gitCommitCode=$(git rev-list --full-history --all --abbrev-commit --max-count 1)' -s -w\" -o easydarwin",
+    "build:win": "npm run build:www && npm run build:ico && go generate && go build -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -X 'main.buildDateTime=$(go-build-helper date)' -X 'main.gitCommitCode=$(go-build-helper version)' -s -w\" -tags release -o EasyDarwin.exe",
+    "build:lin": "npm run build:www && go generate && go build -tags release -ldflags \"-X 'github.com/gwuhaolin/livego/configure.BypassInit=true' -X 'main.buildDateTime=$(go-build-helper date)' -X 'main.gitCommitCode=$(go-build-helper version)' -s -w\" -o easydarwin",
     "dev:win": "npm run web:build && go-bindata-assetfs -debug -o bindata.go -prefix dist dist/... && go build -o EasyDarwin.exe",
     "dev:lin": "npm run web:build && go-bindata-assetfs -debug -o bindata.go -prefix dist dist/... && go build -o easydarwin",
     "dev:www": "npm run web:start",
