global options for ffmpeg

--- a/easydarwin-sample.ini
+++ b/easydarwin-sample.ini
@@ -9,6 +9,8 @@ default_password=admin
 ; ffmpeg_binary=./ffmpeg.sh
 ffmpeg_binary=d:\\opt\\apps\\ffmpeg-4.4.1-full_build\\bin\\ffmpeg.exe
 
+ffmpeg_general_options="-hide_banner -loglevel info -nostats"
+
 ; list available codecs by 'ffmpeg -encoders'
 ; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 (codec h264)
 ; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 RGB (codec h264)
