log ffmpeg output to files

--- a/easydarwin-sample.ini
+++ b/easydarwin-sample.ini
@@ -8,9 +8,8 @@ default_password=admin
 ; On linux, using ffmpeg.sh for VAAPI support
 ; ffmpeg_binary=./ffmpeg.sh
 ffmpeg_binary=d:\\opt\\apps\\ffmpeg-4.4.1-full_build\\bin\\ffmpeg.exe
-
-ffmpeg_general_options="-hide_banner -loglevel info -nostats"
-
+; generic options of ffmpeg
+ffmpeg_general_options="-hide_banner -nostats -nostdin -progress -"
 ; list available codecs by 'ffmpeg -encoders'
 ; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 (codec h264)
 ; libx264     H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 RGB (codec h264)
@@ -24,6 +23,16 @@ ffmpeg_video_codec=h264_qsv
 ; additional codec args used on Linux, such as:
 ; '-hwaccel vaapi -hwaccel_output_format vaapi -hwaccel_device /dev/dri/renderD128'
 ffmpeg_video_codec_args=
+; log file directory for ffmpeg, default is the same dir where executable exists
+ffmpeg_log_dir=D:\\tmp
+; max log file in megabytes, default 100MB
+ffmpeg_log_max_size=1
+; max old files to keep, default 0 (retains all old files)
+ffmpeg_log_max_backups=3
+; max age in days, default 0 (retains all old files)
+ffmpeg_log_max_age=7
+; compressed or not, default false
+ffmpeg_log_compress=true
 
 [flv]
 enabled=true
