support more databases other than sqlite

--- a/easydarwin-sample.ini
+++ b/easydarwin-sample.ini
@@ -3,6 +3,18 @@ port=10008
 default_username=admin
 default_password=admin
 
+[db]
+; database type, supported: 'sqlite', 'mysql', default is 'sqlite'
+db_type=sqlite
+; database file name for 'sqlite'
+db_datafile=
+; database connection uri, if type is 'mysql' or 'postgres', db_uri is the connect string, such as:
+;     'user:password@tcp(localhost:3306)/db?charset=utf8mb4&parseTime=True&loc=Local' for MySQL, and
+;     'host=localhost user=user password=password dbname=db port=5432 sslmode=disable TimeZone=Asia/Shanghai' for Postgres
+db_uri=
+; database operation log level, supported: 'info', 'warn', 'error', 'silent', default is 'silent'
+db_log_level=info
+
 [codec]
 ; easydarwin使用ffmpeg工具。这里表示ffmpeg的可执行程序的路径
 ; On linux, using ffmpeg.sh for VAAPI support
