--- a/easydarwin-sample.ini
+++ b/easydarwin-sample.ini
@@ -19,7 +19,7 @@ db_log_level=info
 ; easydarwin使用ffmpeg工具。这里表示ffmpeg的可执行程序的路径
 ; On linux, using ffmpeg.sh for VAAPI support
 ; ffmpeg_binary=./ffmpeg.sh
-ffmpeg_binary=d:\\opt\\apps\\ffmpeg-4.4.1-full_build\\bin\\ffmpeg.exe
+ffmpeg_binary=d:/opt/apps/ffmpeg-4.4.1-full_build/bin/ffmpeg.exe
 ; generic options of ffmpeg
 ffmpeg_general_options="-hide_banner -nostats -nostdin -progress -"
 ; list available codecs by 'ffmpeg -encoders'
@@ -83,15 +83,13 @@ keep_players=0
 ; password should be the hex of md5(original password)
 authorization_enable=0
 
-; 是否使能推送的同事进行本地存储，使能后则可以进行录像查询与回放。
-save_stream_to_local=0
-
+[record]
 ;本地存储所将要保存的根目录。如果不存在，程序会尝试创建该目录。
-m3u8_dir_path=/Users/ze/Downloads/EasyDarwinGoM3u8
+output_dir_path=d:/tmp/output
+
+;文件格式，默认m3u8
+output_file_format=mp4
 
 ;切片文件时长。本地存储时，将以该时间段为标准来生成ts文件(该时间+一个I帧间隔)，单位秒。
 ;如果需要直播，这个值设小点，但是这样会产生很多ts文件；如果不需要直播，只要存储的话，可设大些。
-ts_duration_second=6
-
-;key为拉流时的自定义路径，value为ffmpeg转码格式，比如可设置为-c:v copy -c:a copy，表示copy源格式；default表示使用ffmpeg内置的输出格式，会进行转码。
-/stream_265=default
+ts_duration_second=600
