optimize stream recording

--- a/easydarwin-sample.ini
+++ b/easydarwin-sample.ini
@@ -2,6 +2,9 @@
 port=10008
 default_username=admin
 default_password=admin
+; hostname of this instance, default is http://localhost:{port}
+; it must be set to actual domain behind reverse proxy
+hostname=
 
 [db]
 ; database type, supported: 'sqlite', 'mysql', default is 'sqlite'
@@ -36,7 +39,7 @@ ffmpeg_video_codec=h264_qsv
 ; '-hwaccel vaapi -hwaccel_output_format vaapi -hwaccel_device /dev/dri/renderD128'
 ffmpeg_video_codec_args=
 ; log file directory for ffmpeg, default is the same dir where executable exists
-ffmpeg_log_dir=D:\\tmp
+ffmpeg_log_dir=D:/tmp/easydarwin/ffmpeg-log
 ; max log file in megabytes, default 100MB
 ffmpeg_log_max_size=1
 ; max old files to keep, default 0 (retains all old files)
@@ -85,10 +88,10 @@ authorization_enable=0
 
 [record]
 ;本地存储所将要保存的根目录。如果不存在，程序会尝试创建该目录。
-output_dir_path=d:/tmp/output
+output_dir_path=d:/tmp/easydarwin/output
 
-;文件格式，默认m3u8
-output_file_format=mp4
+;文件格式，支持格式：mkv, m3u8, 默认m3u8
+default_file_format=mkv
 
 ;切片文件时长。本地存储时，将以该时间段为标准来生成ts文件(该时间+一个I帧间隔)，单位秒。
 ;如果需要直播，这个值设小点，但是这样会产生很多ts文件；如果不需要直播，只要存储的话，可设大些。
